Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85979

CustomMaterial passes property doesn't work with non-inlined passes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.1
    • 5.15.1
    • Quick: 3D
    • None
    • 54cc8fa76eb4a813084ec8f67e01e001cdd66ef6 (qt/qtquick3d/5.15)

      E.g. in custom material example, if I define the passes like this, the object fails to render:

          Pass {
              id: thePass
              shaders: [ vertShader, fragShader ]
          }
      
          passes: [thePass] 

      Error in trace: [400] qrc:/ExampleMaterial.qml:82:5: Unable to assign QList<QObject*> to QQmlListProperty<QQuick3DShaderUtilsRenderPass>

      It's necessary to be able to assing non-inlined passes for QDS.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes