Add clear function for CustomMaterial.passes property

Change-Id: I0bdfdf2d9490716b35c92d2af548970bb85739b1
Fixes: QTBUG-85979
Reviewed-by: Andy Nichols <andy.nichols@qt.io>